--- a/src/components/word-card/word-card.html
+++ b/src/components/word-card/word-card.html
@@ -4,15 +4,29 @@
   </ion-card-header>
 
   <ion-card-content>
-    <ion-card-title>
-      {{word?.text}}
-    </ion-card-title>
-    <p>
-      {{word?.transcription}}
-    </p>
-    <ion-item>
-      <ion-label floating>Translate please</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+    <form #translateForm="ngForm" novalidate>
+      <ion-list no-lines>
+        <ion-item>
+          <h1>{{word?.text}}</h1>
+        </ion-item>
+        <ion-item>
+          <p>{{word?.transcription}}</p>
+        </ion-item>
+        <ion-item>
+          <h2>{{word?.category}}</h2>
+        </ion-item>
+        <ion-item>
+          <ion-label stacked color="primary">Translate please</ion-label>
+          <ion-input [(ngModel)]="userTranslation" #translation="ngModel" name="translation" [placeholder]="translationPlaceHolder"
+            type="text">
+          </ion-input>
+        </ion-item>
+      </ion-list>
+
+      <div padding>
+        <button ion-button (click)="onHelpRequested()" type="button" [hidden]="userTranslation" outline>Show me</button>
+        <button ion-button (click)="onSubmit()" type="submit" [hidden]="!userTranslation">Validate</button>
+      </div>
+    </form>
   </ion-card-content>
 </ion-card>
