--- a/src/components/word-card/word-card.html
+++ b/src/components/word-card/word-card.html
@@ -9,7 +9,7 @@
 
     <p padding>{{word?.transcription}}</p>
 
-    <h3>{{word?.partOfSpeach}}: {{word?.category | lowercase}}</h3>
+    <h3>{{word?.partOfSpeech}}: {{word?.category | lowercase}}</h3>
 
     <form #translateForm="ngForm" novalidate>
 
