--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -2,9 +2,7 @@
   <ion-toolbar>
     <ion-title>{{title}}</ion-title>
     <ion-buttons slot="start">
-      <ion-button icon-only (click)="onBackButtonClick()">
-        <ion-icon name="arrow-back"></ion-icon>
-      </ion-button>
+      <ion-back-button defaultHref="/tabs/(home:home)"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
