--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Login</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -8,21 +11,25 @@
   <form [formGroup]="loginForm" (submit)="loginWithEmailAndPassword()" novalidate>
     <ion-list>
       <ion-item>
-        <ion-label stacked>Email</ion-label>
-        <ion-input formControlName="email" type="email" placeholder="Your email address" [class.invalid]="!loginForm.controls.email.valid && blur">
+        <ion-label position="stacked">Email</ion-label>
+        <ion-input formControlName="email" type="email" placeholder="Your email address" [class.invalid]="!loginForm.controls.email.valid && loginForm.controls.email.touched">
         </ion-input>
       </ion-item>
       <ion-item class="error-message" *ngIf="!loginForm.controls.email.valid && loginForm.controls.email.touched">
-        <p>Please enter a valid email address.</p>
+        <ion-label>
+          <p>Please enter a valid email address.</p>
+        </ion-label>
       </ion-item>
 
       <ion-item>
-        <ion-label stacked>Password</ion-label>
-        <ion-input formControlName="password" type="password" placeholder="Your password" [class.invalid]="!loginForm.controls.password.valid && blur">
+        <ion-label position="stacked">Password</ion-label>
+        <ion-input formControlName="password" type="password" placeholder="Your password" [class.invalid]="!loginForm.controls.password.valid && loginForm.controls.password.touched">
         </ion-input>
       </ion-item>
       <ion-item class="error-message" *ngIf="!loginForm.controls.password.valid && loginForm.controls.password.touched">
-        <p>Your password needs more than 6 characters.</p>
+        <ion-label>
+          <p>Your password needs more than 6 characters.</p>
+        </ion-label>
       </ion-item>
     </ion-list>
 
@@ -34,8 +41,8 @@
   </form>
 
   <ion-list>
-    <ion-button icon-left expand="block" fill="outline" (click)="loginWithGoogle()">
-      <ion-icon name="logo-google"></ion-icon>
+    <ion-button expand="block" fill="outline" (click)="loginWithGoogle()">
+      <ion-icon slot="start" name="logo-google"></ion-icon>
       Log in with Google
     </ion-button>
 
