--- a/src/styles.css
+++ b/src/styles.css
@@ -25,10 +25,11 @@
   font-family: monospace;
   font-size: 1.4rem;
   text-transform: lowercase;
+  color: var(--ion-color-light-contrast);
 }
 
 .char-input-letter div {
-  background: #f7f7f7;
+  background: var(--ion-color-light);
   border-radius: 0.3rem;
   padding: 0.2rem;
 }
@@ -39,7 +40,7 @@
   width: 100%;
   box-sizing: border-box;
   margin-top: 0.5rem;
-  border: solid 0.125rem #ddd;
+  border: solid 0.125rem var(--ion-color-light-shade);
   border-radius: 0.125rem;
 }
 
@@ -71,7 +72,6 @@
   background: var(--ion-color-light);
   color: var(--ion-color-light-contrast);
   box-shadow: 0 0 3px -1px var(--ion-color-light-shade);
-  border-bottom: 1px solid var(--ion-color-light-shade);
   cursor: pointer;
   pointer-events: unset;
 }
@@ -82,6 +82,6 @@
 }
 
 .keyboard-wrapper .simple-keyboard.hg-layout-default .hg-button.hg-highlight {
-  box-shadow: 0px 0px 40px 5px rgba(255, 255, 0, 0.5);
+  box-shadow: 0px 0px 40px 5px rgba(var(--ion-color-warning-rgb));
   z-index: 1;
 }
