--- a/src/styles.css
+++ b/src/styles.css
@@ -85,3 +85,25 @@
   box-shadow: 0px 0px 40px 5px rgba(var(--ion-color-warning-rgb));
   z-index: 1;
 }
+
+ul.count {
+  display: inline-block;
+  padding: 0;
+	margin: 0;
+  margin-left: var(--ion-padding, 16px);
+}
+
+ul.count li {
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+	margin: 0;
+  margin-right: 0.4rem;
+  width: 0.4rem;
+  height: 0.4rem;
+  background-color: var(--ion-color-success);
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  box-shadow: 0px 0px 0.1rem 0.1rem rgba(var(--ion-color-success-rgb));
+}
