--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -89,7 +89,7 @@
 ul.count {
   display: inline-block;
   padding: 0;
-	margin: 0;
+  margin: 0;
   margin-left: var(--ion-padding, 16px);
 }
 
@@ -97,7 +97,7 @@ ul.count li {
   display: inline-block;
   list-style: none;
   padding: 0;
-	margin: 0;
+  margin: 0;
   margin-right: 0.4rem;
   width: 0.4rem;
   height: 0.4rem;
@@ -106,4 +106,44 @@ ul.count li {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   box-shadow: 0px 0px 0.1rem 0.1rem rgba(var(--ion-color-success-rgb));
+}
+
+.chart {
+  width: 100%;
+  height: 25vh;
+  padding: var(--ion-padding, 16px);
+  padding-bottom: 0;
+}
+.chart__wrapper {
+  background: linear-gradient(var(--ion-color-light), var(--ion-color-light-shade));
+  border-radius: 16px;
+}
+
+.chart__bar {
+  fill: var(--ion-color-light-contrast);
+  opacity: 0.5;
+}
+
+.chart_grid-line,
+.chart__axis-line,
+.chart__axis-tick .vx-line {
+  stroke: var(--ion-color-light-contrast);
+  stroke-opacity: 0.5;
+}
+
+.chart__bar-label,
+.chart__axis-tick text,
+.chart__axis-label {
+  fill: var(--ion-color-light-contrast);
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.chart__bar-label,
+.chart__axis-tick text {
+  font-size: 0.4rem !important;
+}
+
+.chart__axis-label {
+  font-size: 0.75rem !important;
 }
