--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -111,6 +111,7 @@ ul.count li {
 .chart {
   width: 100%;
   height: 25vh;
+  min-height: 216px;
   padding: var(--ion-padding, 16px);
   padding-bottom: 0;
 }
