--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -17,6 +17,55 @@
   white-space: normal;
 }
 
+.login-divider {
+  width: 100%;
+  position: relative;
+  height: 40px;
+  margin-top: 20px;
+
+  .bar {
+    width: 41%;
+    height: 2px;
+    position: absolute;
+    background: var(--ion-color-medium);
+  }
+  .bar-top {
+    top: 0;
+    left: 0;
+  }
+  .login-or {
+    position: absolute;
+    display: block;
+    width: 18%;
+    height: 30px;
+    left: 41%;
+    top: -15px;
+    border: 2px solid var(--ion-color-medium);
+    text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    border-radius: 10px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-size: 1.2rem;
+    line-height: 30px;
+    color: var(--ion-color-medium);
+  }
+  .bar-bottom {
+    right: 0;
+    left: auto;
+    top: 0;
+  }
+}
+
 .char-input {
   flex-grow: unset;
 
