fixed bugs in learn

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -126,7 +126,7 @@
         }
 
         &.hg-highlight {
-          box-shadow: 0px 0px 40px 5px var(--ion-color-warning-rgb);
+          box-shadow: 0px 0px 40px 5px var(--ion-color-warning);
           z-index: 1;
         }
       }
