--- a/src/app/chart.scss
+++ b/src/app/chart.scss
@@ -1,29 +1,30 @@
 @mixin chart-line() {
   stroke: var(--ion-color-light-contrast);
-  stroke-opacity: .5;
+  stroke-opacity: 0.5;
 }
 
 @mixin chart-text($fontSize) {
   fill: var(--ion-color-light-contrast);
-  letter-spacing: .06em;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
   font-size: $fontSize !important;
 }
 
 .chart {
-  width: 100%;
-  height: 20vh;
-  min-height: 166px;
   padding: var(--ion-padding, 16px);
   padding-bottom: 0;
+  width: 100%;
+  // height: 20vh;
+  min-height: 166px;
 
   .chart__wrapper {
     background: linear-gradient(var(--ion-color-light), var(--ion-color-light-shade));
     border-radius: 16px;
   }
+
   .chart__bar {
     fill: var(--ion-color-light-contrast);
-    opacity: .5;
+    opacity: 0.5;
   }
   .chart__axis-line {
     @include chart-line();
@@ -33,13 +34,13 @@
       @include chart-line();
     }
     text {
-      @include chart-text(.4rem);
+      @include chart-text(0.4rem);
     }
   }
   .chart__bar-label {
-    @include chart-text(.4rem);
+    @include chart-text(0.4rem);
   }
   .chart__axis-label {
-    @include chart-text(.75rem);
+    @include chart-text(0.75rem);
   }
 }
